<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:padding="3dp"
                android:text="@string/total_value"
                android:textAlignment="textEnd"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/tv_total_value"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/value"
                android:textSize="16sp"
                android:textStyle="italic" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:background="@color/lightlate_gray">

            <TextView
                android:layout_width="145dp"
                android:layout_height="20dp"
                android:text="@string/cryptocurrency"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:layout_width="90dp"
                android:layout_height="20dp"
                android:text="@string/amount"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:text="@string/value"
                android:textAlignment="center"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_wallet"
        android:layout_width="340dp"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/table"/>


</RelativeLayout>

