<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/iv_crypto_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:contentDescription="@string/icon"
        app:srcCompat="@drawable/question_mark" />

    <TextView
        android:id="@+id/tv_crypto_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_crypto_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="172dp"
        android:textSize="24sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="187dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/unit_price"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/amount"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/value"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:id="@+id/tv_unit_price"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_amount"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/amount"
                android:inputType="numberDecimal"
                android:padding="3dp"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_value"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="16sp" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/b_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="98dp"
        android:layout_toStartOf="@+id/iv_crypto_icon"
        android:text="@string/back" />

    <Button
        android:id="@+id/b_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/b_back"
        android:layout_toEndOf="@+id/iv_crypto_icon"
        android:text="@string/confirm" />


</RelativeLayout>